Fix contact form alignment and button visibility issues on mobile and desktop

--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -17,9 +17,18 @@
   }
 
   form {
-    @media screen and (max-width: 480px) {
-      padding: 0 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    
+    @media screen and (max-width: 768px) {
+      input,
+      textarea {
+        width: 100%; // Ajusta inputs para largura total em telas menores
+      }
     }
+    
     input,
     textarea {
       width: 100%;
@@ -59,6 +68,7 @@
       font-size: 1.125rem;
       margin-top: 1.5rem;
       transition: 0.3s ease-in-out;
+      color: #121212; 
 
       span {
         z-index: 1;
